Fix: webp-safe temp files & content-type; update env example; ignore tests

--- a/env.example
+++ b/env.example
@@ -1,4 +1,7 @@
 # AWS Region (optional, defaults to ap-northeast-2)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
 AWS_REGION=
 
 # S3 Bucket Name (required for image upload)
