docs: env.example, readme.md 수정

--- a/env.example
+++ b/env.example
@@ -1,8 +1,8 @@
-# AWS Region (optional, defaults to ap-northeast-2)
+# AWS 인증 정보 (S3 업로드용)
+# - 로컬/서버에 IAM Role/프로파일이 설정되어 있다면 아래 키는 비워도 됩니다.
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
-AWS_REGION=
 
-# S3 Bucket Name (required for image upload)
+# S3 버킷 이름 (필수)
 BUCKET_NAME=
